Premier commit du concours
Initialisation de la branche pour l'ajout du module de concours

--- a/src/Extranet/UtilisateurBundle/Resources/translations/FOSUserBundle.fr.yml
+++ b/src/Extranet/UtilisateurBundle/Resources/translations/FOSUserBundle.fr.yml
@@ -36,7 +36,7 @@ profile:
     edit:
         submit: Mettre à jour
     flash:
-        updated: Le profil a été mis à jour
+        updated:  "Le profil a été mis à jour !"
 
 # Password change
 change_password:
